--- a/css/styles.css
+++ b/css/styles.css
@@ -264,12 +264,14 @@ p {
 }
 
 .benefits-list-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+
   height: 120px;
   background-color: var(--color-portfolio-background-button);
-  padding-bottom: 25px;
-  padding-top: 25px;
-  padding-right: 100px;
-  padding-left: 100px;
+  
   margin-bottom: 30px;
 }
 
@@ -448,6 +450,12 @@ p {
   border: 1px solid var(--color-background-button);
 }
 
+.clients-link:focus {
+  fill: var(--color-background-button);
+  border-radius: 4px;
+  border: 1px solid var(--color-background-button);
+}
+
 /* Подвал он же footer */
 
 .footer {
@@ -528,6 +536,28 @@ p {
   color: var(--color-background-button);
 }
 
+.socials-list-foot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.socials-item-foot {
+  width: 44px;
+  height: 44px;
+}
+
+.socials-link-foot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  fill: var(--color-portfolio-background-button);
+  background: rgba(255, 255, 255, 0.1);
+}
 /* Портфоліо кнопки */
 
 .section-portfolio {
